--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
         </div>
         <div class="bookinput">
             <form action="#" id="bookinput" name="bookform">
-                <input type="text" name="title" id="title" value="Title"/>
-                <input type="text" name="author" id="author" value="Author"/>
-                <input type="button" value="Add" id="add" name="add"/>
+                <input type="text" name="title1" id="title" placeholder="Title"/>
+                <input type="text" name="author1" id="author" placeholder="Author"/>
+                <input type="button" value="Add" id="add" name="add1"/>
             </form>
+    
         </div>
     </section>
+    <script src="index.js"></script>
     
 </body>
 </html>
